--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,10 @@ platform = espressif32
 board = nodemcu-32s
 framework = arduino
 
+upload_port = COM5
+
 build_flags = 
-        -DLOG_LEVEL=LOG_LEVEL_DEBUG
+        -DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
 lib_deps = 
         https://github.com/adafruit/Adafruit_ADS1X15.git
